2005-04-27  John W. Eaton  <jwe@octave.org>

	* parse.y: (safe_fclose): Delete comment list to avoid memory leak.
	(parse_and_execute (FILE *)): Also save and restore global_command.

2005-04-26  John W. Eaton  <jwe@octave.org>

	* mkbuiltins (VAR_FILES): Expect $(VAR_FILES) to have .df suffix.

	* Makefile.in (clean): Also remove $(DLD_PICOBJ).
	Use mk-oct-links --delete to remove links to .oct files. 
	Remove $(DOC_FILES) not $(DEF_FILES) and $(VAR_FILES).

	* mk-oct-links (mk-oct-links): Handle --delete option.
	Rename -p option to be --print.  Skip nonexistent .df files.

2005-04-25  John W. Eaton  <jwe@octave.org>

	* oct-hist.cc (default_history_file, default_history_size): Now static.
	* oct-hist.h: Delete decls.

	* oct-hist.cc (default_history_timestamp_format,
	default_history_timestamp_format): New functions.
	(Vdefault_history_timestamp_format): New variable.
	(symbols_of_oct_hist): DEFVAR it.
	(octave_history_write_timestamp): New function.
	* oct-hist.h (octave_history_write_timestamp): Provide decl.
	* toplev.cc (): call octave_history_write_timestamp here.
	* octave.cc (maximum_braindamage):
	Bind history_timestamp_format_string here.

2005-04-22  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.2.
	(OCTAVE_API_VERSION): Now api-v15.

	* pager.cc (default_pager): Also append -X.

	* DLD-FUNCTIONS/dispatch.cc (Fdispatch): Dispatch help on "string"
	and "sq_string" types.
	(dispatch_record): Add extra space to force new paragraph after
	each dispatched function name if we are formatting with Texinfo.
	Force noindent of preceding "Overloaded function:" tag.

2005-04-21  John W Eaton  <jwe@octave.org>

	* ls-mat5.cc (read_mat5_binary_element): Only read sparse matrix
	values if sizeof (int) == sizeof (octave_idx_type).

	* DLD-FUNCTIONS/colamd.cc: These functions only work if
	sizeof (int) == sizeof (octave_idx_type).

	* Makefile.in (parse.cc): Expect 14 shift/reduce conflicts.
